Initial bringup of OC from Caspar

--- a/arch/arm/configs/cyanogenmod_tostab04_defconfig
+++ b/arch/arm/configs/cyanogenmod_tostab04_defconfig
@@ -37,6 +37,10 @@ CONFIG_CONSTRUCTORS=y
 #
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-Baby_Balthesaur-V1.00"
+CONFIG_TEGRA_OVERCLOCK=y
+CONFIG_TEGRA_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_TEGRA_CPU_FREQ_MAX=1000000
+CONFIG_TEGRA_CPU_FREQ_MIN=216000
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="arm-eabi-"
