--- a/arch/arm/configs/cyanogenmod_tostab04_defconfig
+++ b/arch/arm/configs/cyanogenmod_tostab04_defconfig
@@ -36,7 +36,7 @@ CONFIG_CONSTRUCTORS=y
 # General setup
 #
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-Baby_Balthesaur-V1.12"
+CONFIG_LOCALVERSION="-Baby_Balthesaur-V1.21"
 CONFIG_TEGRA_OVERCLOCK=y
 CONFIG_TEGRA_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_TEGRA_CPU_FREQ_MAX=1000000
@@ -163,10 +163,13 @@ CONFIG_LBDAF=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-# CONFIG_IOSCHED_DEADLINE is not set
-# CONFIG_IOSCHED_CFQ is not set
-CONFIG_DEFAULT_NOOP=y
-CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_VR=y
+#CONFIG_DEFAULT_NOOP=y
+CONFIG_DEFAULT_DEADLINE=y
+CONFIG_DEFAULT_IOSCHED="deadline"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -432,6 +435,12 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_LAZY=y
+CONFIG_CPU_FREQ_GOV_SCARY=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
